crates/widgets/src/overlay/snapshots/widgets__overlay__music_dir__tests__music_dir_overlay_offers_check_on_a_missing_folder.snap
---
source: crates/widgets/src/overlay/music_dir.rs
expression: "frame(&entry(\"/Users/me/Gone\", None), Some(Verdict::Missing), (80, 24))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ╭ LIBRARY FOLDER ──────────────────────────╮                  "
"                  │ > /Users/me/Gone                         │                  "
"                  │ no such path                             │                  "
"                  │ Enter check · Esc cancel                 │                  "
"                  ╰──────────────────────────────────────────╯                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
