crates/widgets/src/overlay/snapshots/widgets__overlay__music_dir__tests__music_dir_overlay_offers_save_on_a_readable_folder.snap
---
source: crates/widgets/src/overlay/music_dir.rs
expression: "frame(&entry(\"/Users/me/Music\", None), Some(Verdict::Readable), (80, 24))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ╭ LIBRARY FOLDER ──────────────────────────╮                  "
"                  │ > /Users/me/Music_                       │                  "
"                  │ a readable folder                        │                  "
"                  │ Enter save · Esc cancel                  │                  "
"                  ╰──────────────────────────────────────────╯                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
