crates/widgets/src/overlay/snapshots/widgets__overlay__music_dir__tests__music_dir_overlay_shows_a_denied_folder_and_the_settings_hint.snap
---
source: crates/widgets/src/overlay/music_dir.rs
expression: "frame(&entry(\"/Users/me/Desktop\", None), Some(Verdict::Denied), (100, 24))"
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"           ╭ LIBRARY FOLDER ────────────────────────────────────────────────────────────╮           "
"           │ > /Users/me/Desktop_                                                       │           "
"           │ no permission: allow the terminal in Privacy & Security, Files and Folders │           "
"           │ Enter open Privacy & Security · Esc cancel                                 │           "
"           ╰────────────────────────────────────────────────────────────────────────────╯           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
