crates/widgets/src/overlay/snapshots/widgets__overlay__music_dir__tests__music_dir_overlay_shows_the_error_line_when_the_folder_is_empty.snap
---
source: crates/widgets/src/overlay/source_dir.rs
assertion_line: 91
expression: "painted(&overlay, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ╭ LIBRARY FOLDER ──────────────────────────╮                  "
"                  │ > _                                      │                  "
"                  │ enter a folder path                      │                  "
"                  │ Enter check · Esc cancel                 │                  "
"                  ╰──────────────────────────────────────────╯                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
