crates/widgets/src/overlay/snapshots/widgets__overlay__music_dir__tests__music_dir_overlay_shows_title_input_and_hint.snap
---
source: crates/widgets/src/overlay/source_dir.rs
assertion_line: 74
expression: "painted(&overlay, 80, 24)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                  ╭ LIBRARY FOLDER ──────────────────────────╮                  "
"                  │ > /home/user/Music_                      │                  "
"                  │                                          │                  "
"                  │ Enter check · Esc cancel                 │                  "
"                  ╰──────────────────────────────────────────╯                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
